openidm-security warning cleanup